# ml-ai-experiments

./: README.md
mlops-zoomcamp-experiment-tracking/: .gitignore  README.md  concept-drift-demo.ipynb  pyproject.toml
mlops-zoomcamp-experiment-tracking/notebooks/: green_taxi_cash_prediction_ebm.ipynb
mlops-zoomcamp-experiment-tracking/scripts/: setup_mlflow.py
mlops-zoomcamp-experiment-tracking/src/: config.yaml  datahandler.py  inference_pipeline.py  mlflowhelper.py  train_pipeline.py
mlops-zoomcamp-experiment-tracking/src/0. to-delete/: preprocess_data.py
notebooks/: additive-network-pytorch.ipynb  ai-act-chatbot.ipynb  netron-dnn-visualization.ipynb
